--- a/CosmosDb/CollageServices/Source/College.DAL/Collage.DAL.csproj
+++ b/CosmosDb/CollageServices/Source/College.DAL/Collage.DAL.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="6.0.8" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\College.Core\College.Core.csproj" />
+    <ProjectReference Include="..\College.Core\Collage.Core.csproj" />
   </ItemGroup>
 
 </Project>
