--- a/CosmosDb/CollageServices/Source/Collage.API/appsettings.json
+++ b/CosmosDb/CollageServices/Source/Collage.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CosmosDbConnectionStrings": {
+    "accountEndPoint": "https://YourCosmosAccount.documents.azure.com:443/",
+    "accountKey": "YourCosmosAccountKey",
+    "databaseName": "YourCosmosDbName"
+  }
 }
