--- a/CosmosDb/CollageServices/Source/Collage.API/Collage.API.csproj
+++ b/CosmosDb/CollageServices/Source/Collage.API/Collage.API.csproj
@@ -10,8 +10,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="6.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Collage.BLL\Collage.BLL.csproj" />
+    <ProjectReference Include="..\Collage.Core\Collage.Core.csproj" />
+    <ProjectReference Include="..\Collage.DAL\Collage.DAL.csproj" />
   </ItemGroup>
 
 </Project>
