--- a/WebApps/SimpleHtmlSite/.azure/config
+++ b/WebApps/SimpleHtmlSite/.azure/config
@@ -1,7 +1,7 @@
 [defaults]
-group = rg-az204-webapps-reactor-001
+group = rg-womd-robbie-001
 sku = F1
-appserviceplan = plan-hellohtml04092021
+appserviceplan = plan-hellohtml03102022
 location = eastus
-web = hellohtml04092021
+web = app-hellohtml03102022
 
